@@ -17,13 +17,17 @@
  *  along with Genetic Function Programming.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+#include <stack>
 #include "world.h"
 #include "ioobject.h"
+#include "object_utils.h"
 
 WorldFile World::s_File;
 
 World::World(VM::Environment &env, const char *filename)
-	:m_Map(env)
+	:m_Map(env),
+	m_CurrentMap(env),
+	m_IndObject(env)
 {
 	s_File.SetFile(filename);
 	for(int hm = s_File.GetHeight() - 1; hm >= 0; hm --)
@@ -47,12 +51,11 @@ World::World(VM::Environment &env, const char *filename)
 		}
 		m_Map = VM::Object(line, m_Map);
 	}
-	std::cout << "map: " << m_Map << std::endl;
-	std::cout << "x: " << m_PosX << std::endl;
-	std::cout << "y: " << m_PosY << std::endl;
+	m_IndObject = VM::Object(VM::Object(env, VM::INTEGER, -1), VM::Object(env));
+	UpdateCurrentMap();
 }
 
-bool CheckCell(int x, int y) const
+bool World::CheckCell(int x, int y) const
 {
 	if((x < 0) || (x >= s_File.GetWidth()) || (y < 0) || (y >= s_File.GetHeight()))
 	{
@@ -92,5 +95,26 @@ bool World::Move(int dir)
 	}
 	m_PosX += dX;
 	m_PosY += dY;
+	UpdateCurrentMap();
+	return true;
+}
+
+void World::UpdateCurrentMap()
+{
+	int y = m_PosY;
+	std::stack<VM::WeakObject> obj_stack;
+	VM::WeakObject p(m_Map);
+	while((y > 0) && (! p.IsNIL()))
+	{
+		obj_stack.push(p.GetHead());
+		p = p.GetTail();
+		y --;
+	}
+	m_CurrentMap = VM::Object(EditList(p.GetHead(), m_PosX, m_IndObject), p.GetTail());
+	while(! obj_stack.empty())
+	{
+		m_CurrentMap = VM::Object(obj_stack.top(), m_CurrentMap);
+		obj_stack.pop();
+	}
 }
 
